--- a/src/assets/less/elements/mainMenu.less
+++ b/src/assets/less/elements/mainMenu.less
@@ -5,11 +5,7 @@
 
 .mainMenu {
     background: #fff;
-    bottom: 0;
-    height: 50px;
-    left: 0;
-    position: absolute;
-    z-index: 20;
+    height: 5rem;
 }
 
 // elements
@@ -21,9 +17,9 @@
     border: @color-main-23 1px solid;
     border-bottom: 0;
     box-sizing: border-box;
-    height: 50px;
+    height: 5rem;
     position: relative;
-    width: 960px;
+    width: 100%;
     z-index: 100;
 
     &,
@@ -39,11 +35,11 @@
         border-right: 1px @color-main-23 solid;
         color: @color-main-10;
         display: block;
-        font-size: 15px;
+        font-size: 1.5rem;
         font-weight: bold;
-        height: 49px;
-        line-height: 49px;
-        padding: 0 10px;
+        height: 4.9rem;
+        line-height: 4.9rem;
+        padding: 0 1rem;
         text-align: center;
         text-decoration: none;
     }
