--- a/src/assets/less/elements/posterTeaser.less
+++ b/src/assets/less/elements/posterTeaser.less
@@ -1,36 +1,37 @@
 /** posterTeaser.less */
 
+// block
+// =====
+
 .posterTeaser {
-
-    /*
-        You may want to override the background color.
-        Do so by applying a global background-color modifier, eg.:
-
-        <div class="posterTeaser bg-blue-10"> ... </div>
-    */
 
     .mixin-clearfix;
     .mixin-defaultBorderRadius;
     background: @color-main-5;
     border: 0;
-    display: block;
+    display: inline-block;
     font-family: @font-sansserif;
     overflow: hidden;
     position: relative;
 
-    img {
-        display: block;
-        transition: opacity 200ms ease-out;
-    }
-
     a& {
+        cursor: pointer;
         text-decoration: none;
     }
 
-    a&:hover img {
-        opacity: .8;
-    }
+}
 
+// elements
+// ========
+
+.posterTeaser__image {
+    opacity: .5;
+    display: block;
+    transition: opacity 200ms ease-out;
+}
+
+a.posterTeaser:hover .posterTeaser__image {
+    opacity: .3;
 }
 
 .posterTeaser__body {
@@ -50,7 +51,7 @@
     }
 
     p, ul, ol {
-        font-size: 15px;
+        font-size: 1.5rem;
         margin: 1rem 0;
     }
 
@@ -60,19 +61,8 @@
 
 }
 
-// dark body background
-
-.posterTeaser--darkBody .posterTeaser__body {
-    background: fade(@color-main-5, 50%);
-}
-
-// light body background
-
-.posterTeaser--lightBody .posterTeaser__body {
-    color: @color-main-8;
-    background: fade(@color-main-25, 50%);
-    text-shadow: none;
-}
+// modifiers
+// =========
 
 // body sticks to bottom
 
