--- a/src/templates/pages/elements/_blank.html
+++ b/src/templates/pages/elements/_blank.html
@@ -31,7 +31,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     </div>
 </div>
 
-<div class="note note--subtle note--large note--icon085 m-t-8">
+<div class="note note--subtle note--large m-t-8">
     <h3 class="note__headline">Some Important Note</h3>
     <div class="note__body">
         <p>This is very important.</p>
