--- a/src/assets/less/elements/ratingInput.less
+++ b/src/assets/less/elements/ratingInput.less
@@ -3,6 +3,10 @@
 // block
 // =====
 
+.noJs .ratingInput {
+    display: none;
+}
+
 .ratingInput {
     .mixin-defaultBorderRadius;
     background: @color-white;
