--- a/src/assets/less/core/documentation.less
+++ b/src/assets/less/core/documentation.less
@@ -16,7 +16,7 @@
 
 .documentation__footer {
     width: 100%;
-    color: @gray-15;
+    color: @color-main-15;
     padding: 10rem 0 5rem 0;
 }
 
@@ -32,7 +32,7 @@
     // text color
     
     > * {
-        color: @gray-10;
+        color: @color-main-10;
     }
     
     // headlines
@@ -43,7 +43,7 @@
     > h4,
     > h5,
     > h6 {
-        color: @gray-6;
+        color: @color-main-6;
     }
     
     > h3,
@@ -57,14 +57,14 @@
 
     > blockquote {
         padding-left: 3rem;
-        border-left: @gray-22 2px solid;
+        border-left: @color-main-22 2px solid;
     }
 
     // abbr, acronym
 
     > abbr,
     > acronym {
-        border-bottom: @gray-10 1px dashed;
+        border-bottom: @color-main-10 1px dashed;
         cursor: help;
     }
 
@@ -89,7 +89,7 @@
 
         &::before {
             .mixin-defaultBorderRadius;
-            background: @gray-20;
+            background: @color-main-20;
             content: ' ';
             height: .2rem;
             left: -4rem;
@@ -99,7 +99,7 @@
         }
 
         &::after {
-            color: @gray-20;
+            color: @color-main-20;
             content: '#';
             font-weight: bold;
             left: -6rem;
@@ -112,8 +112,6 @@
 
     > table {
         
-        border-color: @gray-23;
-
         th:empty {
             display: none;
         }
@@ -124,23 +122,13 @@
             width: 13rem;
         }
 
-        th {
-            background: @gray-25;
-        }
-
-        th, td {
-            border-color: @gray-23;
-        }
-
     }
-    
-    // code
+        
+    // inline code
     
     > p > code {
         .mixin-defaultBorderRadius;
-        background: @gray-23;
-        color: @gray-5;
-        font-size: 0.9em;
+        background: @color-main-23;
         padding: .1rem .5rem;
     }
 
@@ -194,16 +182,16 @@
     
     .mixin-defaultBorderRadius;
     @verticalMargin();
-    border: @gray-23 1px solid;
+    border: @color-main-23 1px solid;
     display: block;
     overflow: visible;
     position: relative;
     transition: all 200ms ease-in;
 
     code pre {
-        background: @gray-25;
-        border-bottom: @gray-23 1px solid;
-        border-top: @gray-23 1px solid;
+        background: @color-main-25;
+        border-bottom: @color-main-23 1px solid;
+        border-top: @color-main-23 1px solid;
         display: block;
         font-size: 1.3rem;
         line-height: 1.75;
@@ -235,7 +223,7 @@
 
         background: transparent;
         border: 0;
-        color: @gray-15;
+        color: @color-main-15;
         cursor: pointer;
         display: inline-block;
         font-size: 1.3rem;
@@ -244,13 +232,13 @@
         padding: .5rem;
 
         &:hover {
-            color: @gray-10;
+            color: @color-main-10;
         }
 
     }
 
     button + button {
-        border-left: @gray-22 1px solid;
+        border-left: @color-main-22 1px solid;
     }
 
 }
@@ -258,7 +246,7 @@
 .documentation__treeview {
     .mixin-defaultBorderRadius;
     @verticalRhythm();
-    background: @gray-23;
+    background: @color-main-25;
 }
 
 .documentation__fileDisplay {
@@ -273,7 +261,7 @@
 
     code {
         .mixin-defaultBorderRadius;
-        background: @gray-25;
+        background: @color-main-25;
         bottom: 4rem;
         display: block;
         left: 4rem;
@@ -281,6 +269,11 @@
         position: absolute;
         right: 4rem;
         top: 4rem;
+    }
+    
+    code pre {
+        font-size: 1.3rem;
+        line-height: 1.75;
     }
 
     .btnDismiss {
@@ -298,14 +291,9 @@
 
     code,
     pre {
-        -moz-hyphens: none;
-        -moz-tab-size: 4;
-        -ms-hyphens: none;
-        -o-tab-size: 4;
-        -webkit-hyphens: none;
         direction: ltr;
         font-family: Consolas, Monaco, 'Andale Mono', monospace;
-        font-size: inherit;
+        font-size: .85em;
         hyphens: none;
         line-height: inherit;
         tab-size: 4;
@@ -418,6 +406,7 @@
     .token.bold {
         font-weight: bold;
     }
+    
     .token.italic {
         font-style: italic;
     }
@@ -431,10 +420,6 @@
 // modifiers
 // =========
 
-.documentation__block--dark {
-
-    .documentation__example {
-        background: @gray-23;
-    }
-
+.documentation__block--dark .documentation__example {
+    background: @color-main-23;
 }
