--- a/src/assets/less/elements/form.less
+++ b/src/assets/less/elements/form.less
@@ -150,7 +150,7 @@ textarea.input--large {
 // date inputs
 // ===========
 
-[data-environment="desktop"] {
+[yoi-environment="desktop"] {
 
     // disable native date pickers
     // on desktop browsers
