--- a/src/assets/less/elements/note.less
+++ b/src/assets/less/elements/note.less
@@ -188,7 +188,7 @@
 
 // dismissable notes (see notifications.js)
 
-.note[data-option="dismissable"] {
+.note[yoi-dismissable] {
     padding-right: 4rem;
 }
 
