--- a/src/assets/less/elements/pieChart.less
+++ b/src/assets/less/elements/pieChart.less
@@ -34,7 +34,7 @@
         cursor: pointer;
     }
 
-    [data-piechart*="highlight:false;"] & {
+    [yoi-piechart*="highlight:false;"] & {
         cursor: default;
     }
 
