--- a/src/assets/less/elements/slider.less
+++ b/src/assets/less/elements/slider.less
@@ -42,11 +42,11 @@
         display: block;
     }
 
-    [data-slider*="clickable"] & {
+    [yoi-slider*="clickable"] & {
         cursor: pointer;
     }
 
-    [data-slider*="animate"] & {
+    [yoi-slider*="animate"] & {
         background: inherit;
         left: 0;
         position: absolute;
