--- a/src/assets/less/elements/tables.less
+++ b/src/assets/less/elements/tables.less
@@ -170,7 +170,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@borderRadius * 1px) 0; }
 
 // selectable table rows
 
-.js table[data-table*="selectable"] {
+.js table[yoi-table*="selectable"] {
 
     // mouseover on row
 
@@ -241,7 +241,7 @@ tr:last-child td:last-child  { border-radius: 0 0 (@borderRadius * 1px) 0; }
 
 // removeable table rows
 
-.js table[data-table*="removeable"] {
+.js table[yoi-table*="removeable"] {
 
     // cells for remove buttons
 
