--- a/src/templates/pages/elements/modal.html
+++ b/src/templates/pages/elements/modal.html
@@ -3,7 +3,7 @@
 
 {% markdown %}
 ## Modal
-Modals are simple, regular pages, referenced by either `href`-attributes or a path via a `yoi-odal`-attribute. Any element may reference a modal. Modals are loaded asynchronically (ajax) and injected into the dom.
+Modals are simple, regular pages, referenced by either `href`-attributes or a path via a `yoi-modal`-attribute. Any element may reference a modal. Modals are loaded asynchronically (ajax) and injected into the dom.
 
 |                |                                                                     |
 | -              | -                                                                   |
